fixed call to action and spacing

--- a/css/medium.css
+++ b/css/medium.css
@@ -181,6 +181,8 @@
 
     .center_div {
         max-width: 100%;
+        margin-left: 3%;
+        margin-right: 3%;
     }
 
 }
